name:                SemiRing
version:             0.1
synopsis:            A type class for semirings and some basic implementations
description:         This provides a type class for semi-rings and some trivial 
                     implementations of common semi-rings for natural language 
                     applications.
category:            Natural Language Processing
license:             BSD3
license-file:        LICENSE
author:              Sasha Rush
maintainer:          <srush@mit.edu>
build-Type:          Simple
cabal-version:       >= 1.2

flag testing
    description: Testing mode, only build minimal components
    default: False

library
    exposed-modules:     NLP.SemiRing,
                         NLP.SemiRing.Accept
                         NLP.SemiRing.Prob

    if flag(testing)
        buildable: False

    build-Depends:   base       >= 3   && < 4,
                     containers >= 0.1 && < 0.3,
                     monoids    >= 0.2.0.2 && < 0.3,
                     Boolean

executable hstestsemi
    main-is:            Tests.hs
    other-modules:      NLP.SemiRing,
                        NLP.SemiRing.Accept
                        NLP.SemiRing.Prob

    
    hs-source-dirs: . tests/

    build-Depends:   base       >= 3   && < 4,
                     containers >= 0.1 && < 0.3,
                     monoids    >= 0.2.0.2 && < 0.3,
                     Boolean,
                     QuickCheck >= 2,
                     HUnit,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2
                     
                     
    if !flag(testing)
        buildable: False
                  
